# Stellara_Contracts

./: ACADEMY_VESTING_SUMMARY.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  PR_MESSAGE.md  README.md  VESTING_COMPLETE.md  VESTING_PR_MESSAGE.md
Backend/: .env.example  LIQUIDITY_MINING_INTEGRATION.md  README.md  docker-compose.yml  package-lock.json  package.json
Backend/infrastructure/multi-cloud/: README.md
Backend/prisma/: MIGRATION_GUIDE.md  schema.prisma
Backend/scripts/: blue-green-lib.ts
Backend/src/: app.module.ts  main.ts
Backend/src/abi-registry/: abi-registry.module.ts  abi-registry.service.spec.ts
Backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
Contracts/: Cargo.toml
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy/src/: test.rs  vesting.rs
Contracts/contracts/governance_token/src/: governance.rs  lib.rs
Contracts/contracts/reward_distributor/src/: lib.rs
Contracts/contracts/staking/src/: lib.rs  staking.rs
Contracts/contracts/trading/src/: lib.rs  test.rs
Contracts/contracts/trading/test_snapshots/test/: test_contract_cannot_be_initialized_twice.1.json  test_contract_initialization.1.json  test_duplicate_approval_prevention.1.json  test_multi_sig_protection.1.json  test_upgrade_cancellation_by_admin.1.json  test_upgrade_proposal_approval_flow.1.json  test_upgrade_proposal_creation.1.json  test_upgrade_rejection_flow.1.json  test_upgrade_timelock_enforcement.1.json
Contracts/contracts/yield_farming/src/: lib.rs
Contracts/shared/src/: governance.rs
(+94 files in other folders)
