[workspace]
members = [
    "contracts/token",
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/staking",
    "contracts/yield_farming",
    "contracts/reward_distributor",
    "contracts/governance_token",
    "shared",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
